// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`YourLibraryButton.vue > Props > Button is active 1`] = `
<button
  aria-pressed="true"
  class="btn btn-primary active"
>
  Button Text
</button>
`;

exports[`YourLibraryButton.vue > Props > Button status is set 1`] = `
<button
  aria-pressed="false"
  class="btn btn-success"
>
  Button Text
</button>
`;

exports[`YourLibraryButton.vue > Renders correctly 1`] = `
<button
  aria-pressed="false"
  class="btn btn-primary"
>
  Button Text
</button>
`;
